css/basic.css
body {
  --kiwiki-body-bg: __kiwiki_body_bg_color__;
  --kiwiki-text-color: __kiwiki_text_color__;
  --kiwiki-main: __kiwiki_main_color__;
  --kiwiki-ui-color: __kiwiki_ui_color__;
  --kiwiki-ui-100: __kiwiki_ui_100_color__;
  --kiwiki-ui-200: __kiwiki_ui_200_color__;
  --kiwiki-ui-300: __kiwiki_ui_300_color__;
  --kiwiki-ui-400: __kiwiki_ui_400_color__;
  --kiwiki-ui-500: __kiwiki_ui_500_color__;
  --kiwiki-ui-600: __kiwiki_ui_600_color__;
  --kiwiki-ui-700: __kiwiki_ui_700_color__;
  --kiwiki-ui-800: __kiwiki_ui_800_color__;
  --kiwiki-ui-900: __kiwiki_ui_900_color__;
  --kiwiki-btn-bg: __kiwiki_btn_bg_color__;
  --kiwiki-btn-text: __kiwiki_btn_text_color__;
  --kiwiki-btn-hover-bg: __kiwiki_btn_bg_hover_color__;
  --kiwiki-btn-hover-text: __kiwiki_btn_hover_text_color__;
  --kiwiki-btn-border: __kiwiki_btn_border_color__;
}

#theme-mode svg#themeicon #dark {
  display: none;
}

@media (prefers-color-scheme: dark) {
  body {
    --kiwiki-body-bg: __kiwiki_dark_body_bg_color__;
    --kiwiki-text-color: __kiwiki_dark_text_color__;
    --kiwiki-main: __kiwiki_dark_main_color__;
    --kiwiki-ui-color: __kiwiki_dark_ui_color__;
    --kiwiki-ui-100: __kiwiki_dark_ui_100_color__;
    --kiwiki-ui-200: __kiwiki_dark_ui_200_color__;
    --kiwiki-ui-300: __kiwiki_dark_ui_300_color__;
    --kiwiki-ui-400: __kiwiki_dark_ui_400_color__;
    --kiwiki-ui-500: __kiwiki_dark_ui_500_color__;
    --kiwiki-ui-600: __kiwiki_dark_ui_600_color__;
    --kiwiki-ui-700: __kiwiki_dark_ui_700_color__;
    --kiwiki-ui-800: __kiwiki_dark_ui_800_color__;
    --kiwiki-ui-900: __kiwiki_dark_ui_900_color__;
    --kiwiki-btn-bg: __kiwiki_dark_btn_bg_color__;
    --kiwiki-btn-text: __kiwiki_dark_btn_text_color__;
    --kiwiki-btn-hover-bg: __kiwiki_dark_btn_bg_hover_color__;
    --kiwiki-btn-hover-text: __kiwiki_dark_btn_hover_text_color__;
    --kiwiki-btn-border: __kiwiki_dark_btn_border_color__;
  }
  #theme-mode svg#themeicon #light {
    display: none;
  }
  #theme-mode svg#themeicon #dark {
    display: initial;
  }
}

body.lightmode {
  --kiwiki-body-bg: __kiwiki_body_bg_color__;
  --kiwiki-header-bg: __kiwiki_header_bg_color__;
  --kiwiki-text-color: __kiwiki_text_color__;
  --kiwiki-main: __kiwiki_main_color__;
  --kiwiki-ui-color: __kiwiki_ui_color__;
  --kiwiki-ui-100: __kiwiki_ui_100_color__;
  --kiwiki-ui-200: __kiwiki_ui_200_color__;
  --kiwiki-ui-300: __kiwiki_ui_300_color__;
  --kiwiki-ui-400: __kiwiki_ui_400_color__;
  --kiwiki-ui-500: __kiwiki_ui_500_color__;
  --kiwiki-ui-600: __kiwiki_ui_600_color__;
  --kiwiki-ui-700: __kiwiki_ui_700_color__;
  --kiwiki-ui-800: __kiwiki_ui_800_color__;
  --kiwiki-ui-900: __kiwiki_ui_900_color__;
  --kiwiki-btn-bg: __kiwiki_btn_bg_color__;
  --kiwiki-btn-text: __kiwiki_btn_text_color__;
  --kiwiki-btn-hover-bg: __kiwiki_btn_bg_hover_color__;
  --kiwiki-btn-hover-text: __kiwiki_btn_hover_text_color__;
  --kiwiki-btn-border: __kiwiki_btn_border_color__;
}

body.darkmode {
  --kiwiki-body-bg: __kiwiki_dark_body_bg_color__;
  --kiwiki-header-bg: __kiwiki_dark_header_bg_color__;
  --kiwiki-text-color: __kiwiki_dark_text_color__;
  --kiwiki-main: __kiwiki_dark_main_color__;
  --kiwiki-ui-color: __kiwiki_dark_ui_color__;
  --kiwiki-ui-100: __kiwiki_dark_ui_100_color__;
  --kiwiki-ui-200: __kiwiki_dark_ui_200_color__;
  --kiwiki-ui-300: __kiwiki_dark_ui_300_color__;
  --kiwiki-ui-400: __kiwiki_dark_ui_400_color__;
  --kiwiki-ui-500: __kiwiki_dark_ui_500_color__;
  --kiwiki-ui-600: __kiwiki_dark_ui_600_color__;
  --kiwiki-ui-700: __kiwiki_dark_ui_700_color__;
  --kiwiki-ui-800: __kiwiki_dark_ui_800_color__;
  --kiwiki-ui-900: __kiwiki_dark_ui_900_color__;
  --kiwiki-btn-bg: __kiwiki_dark_btn_bg_color__;
  --kiwiki-btn-text: __kiwiki_dark_btn_text_color__;
  --kiwiki-btn-hover-bg: __kiwiki_dark_btn_bg_hover_color__;
  --kiwiki-btn-hover-text: __kiwiki_dark_btn_hover_text_color__;
  --kiwiki-btn-border: __kiwiki_dark_btn_border_color__;
}

body.darkmode #theme-mode svg#themeicon #light,
body.lightmode #theme-mode svg#themeicon #dark {
  display: none;
}
body.darkmode #theme-mode svg#themeicon #dark,
body.lightmode #theme-mode svg#themeicon #light {
  display: initial;
}

#kiwiki.darkmode form.search .no button[type="submit"] {
  border: 1px solid var(--kiwiki-text-color);
}

* {
  outline: 0;
}

::-moz-selection,
::selection {
  color: var(--kiwiki-main);
  background: var(--kiwiki-btn-hover-bg);
}

html,
body {
  background-color: var(--kiwiki-body-bg);
  color: var(--kiwiki-text-color);
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
  margin: 0;
  padding: 0;
}

html {
  overflow-x: auto;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

body {
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

img {
  border-width: 0;
}

img,
video {
  height: auto;
}

img,
object,
iframe,
video,
audio,
select {
  max-width: 100%;
}

a,
a:visited {
  color: var(--kiwiki-btn-bg);
}

a:hover {
  color: var(--kiwiki-btn-hover-bg);
}

a.wikilink2:link, a.wikilink2:hover, a.wikilink2:visited {
  color: red;
}

#wiki__text {
  background-color: var(--kiwiki-body-bg);
  color: var(--kiwiki-body);
}

